update to the standard verify play which checks for pip packages in a defined virtual environment

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,6 +2,6 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include geosword.neovim"
+    - name: "Include ansible.neovim"
       include_role:
-        name: "geosword.neovim"
+        name: "ansible.neovim"
