--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,5 @@
 ---
 # defaults file for geosword.neovim
 userdir: "{{ ansible_env.HOME }}"
+# location of virtualenvironment for neovim. Check this matches ```g:python3_host_prog``` in init.vim
+virtualenvpath: "{{ userdir }}/.virtualenvs/neovim"
