--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 ansible==2.9.6
+ansible-lint==4.3.7
 appdirs==1.4.3
 arrow==0.15.5
 aspy.yaml==1.3.0
@@ -13,6 +14,7 @@ click==7.1.1
 click-completion==0.5.2
 click-help-colors==0.8
 colorama==0.4.3
+commonmark==0.9.1
 cookiecutter==1.7.0
 cryptography==2.8
 distlib==0.3.0
@@ -36,17 +38,21 @@ poyo==0.5.0
 pre-commit==1.21.0
 ptyprocess==0.6.0
 pycparser==2.20
+Pygments==2.7.4
 PyNaCl==1.3.0
 python-dateutil==2.8.1
 python-gilt==1.2.3
 PyYAML==5.3.1
 requests==2.23.0
+rich==9.8.2
+ruamel.yaml==0.16.12
 sh==1.12.14
 shellingham==1.3.2
 six==1.14.0
 tabulate==0.8.7
 toml==0.10.0
 tree-format==0.1.2
+typing-extensions==3.7.4.3
 urllib3==1.25.8
 virtualenv==20.0.15
 websocket-client==0.57.0
